tests/ui/impl-trait/in-bindings/lifetime-failure.stderr
error[E0597]: `local` does not live long enough
  --> $DIR/lifetime-failure.rs:10:31
   |
LL |     let local = 0;
   |         ----- binding `local` declared here
LL |     let _: W<impl Static> = W(&local);
   |            --------------     ^^^^^^ borrowed value does not live long enough
   |            |
   |            type annotation requires that `local` is borrowed for `'static`
LL |
LL | }
   | - `local` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
